--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -26,13 +26,11 @@
     position: absolute;
     top: 0;
     right: 0;
-    // align-self: flex-end;
     width: 35px;
     height: 35px;
     margin: 20px 30px 0 0;
     background-image: url('../images/burger_menu.png');
     background-position: center;
-    // background-size: cover;
     background-repeat: no-repeat;
     cursor: pointer;
   }
@@ -40,12 +38,35 @@
 
 @media screen and (max-width: $small-screen) {
   .nav {
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    margin-top: 50px;
-    text-align: center;
-    opacity: 0;
+    &__menu {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+}
+
+@media screen and (max-width: $phone-screen) {
+  .nav {
+    &__menu {
+      position: relative;
+      padding-bottom: 50px;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      text-align: center;
+      background-color: $main-backgroung-color;
+      opacity: 0;
+      transition: opacity 0.3s linear;
+      z-index: 5;
+
+    }
+
+    &__list {
+      &--right {
+        margin: 15px 0;
+        gap: 8px;
+      }
+    }
 
     &__toggle {
       display: block;
