--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -6,7 +6,8 @@ $complementary-color: #ddb04e;
 $socia-icon-size: 20px;
 
 $large-screen: 1800px;
-$normal-screen: 1600px;
+$normal-screen: 1550px;
 $regular-screen: 1350px;
 $small-screen: 1200px;
-$phone-screen: 550px;
+$tablet-screen: 1000px;
+$phone-screen: 820px;
